--- a/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
@@ -116,7 +116,7 @@
   <string name="apply">Použít</string>
   <string name="aspect_ratio_free">Vlastní</string>
   <string name="aspect_ratio_origin">Originál</string>
-  <string name="assistant_page_label">Asistent</string>
+  <string name="assistant_page_label">Příběhy</string>
   <string name="associate_face_album">Vyberte album</string>
   <string name="auto">Auto</string>
   <string name="auto_backup_introduce">Automaticky zálohovat fotografie a videa (Mi účet je nutný)</string>
@@ -126,7 +126,7 @@
   <string name="auto_update_off">Vyp</string>
   <string name="auto_update_on">Zap</string>
   <string name="auto_upload_before_share_message">Toto album musí být před sdílením nejprve zálohováno na MiCloud.</string>
-  <string name="auto_upload_before_share_title">Nápověda</string>
+  <string name="auto_upload_before_share_title">Pomoc</string>
   <string name="auto_upload_disable_tip">Synchr. s MiCloud je zakázána</string>
   <string name="auto_upload_disable_toast_long_press_menu">Synchr. s MiCloud je zakázána</string>
   <string name="auto_upload_enable_toast_long_press_menu">Synchr. s MiCloud je povolena</string>
@@ -1389,5 +1389,223 @@
   <string name="screen_save_dialog_btn_cancel">Zrušit</string>
   <string name="screen_save_dialog_btn_delete">Vymazat screenshot</string>
   <string name="screen_save_dialog_btn_save">Uložit</string>
-  <string name="similar_keep_clear">Ponechat nejlepší záběry</string>
+  <string name="similar_keep_clear">Ponechat nejlepší záběry</string>  
+  <string name="added_to_favorites_desc">Přidáno do oblíbených</string>
+     <string name="alert_selection_description">MIUI bude analyzovat podobné fotografie a vybere z nich ten nejlepší záběr.</string>
+     <string name="alert_selection_title">Vybrat nejlepší záběr</string>
+     <string name="backup_file_over_size_desc">Fotografie větší než %1$s a videa větší než %2$s nemohou být zálohovány.</string>
+     <string name="card_delete_description">Tento příběh se už nezobrazí. I tak ho chcete vymazat?</string>
+     <string name="card_delete_negative_text">Zrušit</string>
+     <string name="card_delete_positive_text">Vymazat</string>
+     <string name="card_delete_title">vymazat příběh</string>
+     <string name="card_description_annual_events">Hezké časy strávené spolu</string>
+     <string name="card_description_annual_foods">Deník jídel</string>
+     <string name="card_description_annual_pets">Ocásky, tlapky a chlupy</string>
+     <string name="card_description_annual_travel">Co jste viděli na svých cestách</string>
+     <string name="card_title_activities">Události</string>
+     <string name="card_title_annual_events">Moje párty v %1$s</string>
+     <string name="card_title_annual_foods">Chutné %1$s</string>
+     <string name="card_title_annual_pets">Chlupaté tlapky v %1$s</string>
+     <string name="card_title_annual_travel">Moje výlety v %1$s</string>
+     <string name="card_title_monthly_foods">Chutné</string>
+     <string name="card_title_monthly_pets">chlupaté tlapky</string>
+     <string name="card_title_party">Párty</string>
+     <string name="card_title_pastyear_activities">Události za poslední rok</string>
+     <string name="card_title_pastyear_party">Párty za poslední rok</string>
+     <string name="card_title_pastyear_sports">Cvičení za poslední rok</string>
+     <string name="card_title_recent_memory">Nedávné vzpomínky</string>
+     <string name="card_title_sports">Cvičení</string>
+     <string name="collage_ratio_text">Poměr stran</string>
+     <string name="collage_title_stitching">Film</string>
+     <string name="debugging_tip">Generovanie dat</string>
+     <string name="document_provider_guide_step_1">1. Stiskněte tlačítko \"Více\".</string>
+     <string name="document_provider_guide_step_2">2. Stiskněte \"Zobrazit interní úložiště\".</string>
+     <string name="document_provider_guide_step_3">3. Stiskněte menu tlačítko.</string>
+     <string name="document_provider_guide_step_4">4. Stiskněte \"SD karta\".</string>
+     <string name="document_provider_guide_step_5">5. Stiskněte \"Vybrať\".</string>
+     <string name="download_with_metered_network_msg">Stahování originální fotografie může navýšit vaše poplatky. Přesto stáhnout?</string>
+     <string name="download_with_metered_network_title">Jste připojeni na mobilní data</string>
+     <string name="empty_description_conditions">Pamatovat příběhy na kterých záleží</string>
+     <string name="empty_description_no_cards">Pamatovat příběhy na kterých záleží</string>
+     <string name="empty_title_no_cards">Alba příběhů</string>
+     <string name="face_album_title">Fotografie s %s</string>
+     <string name="filter_bi_bw">B&amp;W</string>
+     <string name="filter_bi_dusk">Dusk</string>
+     <string name="filter_bi_lilt">Lilt</string>
+     <string name="filter_bi_memory">Memory</string>
+     <string name="filter_bi_pink">Pink</string>
+     <string name="filter_bi_retro">Retro</string>
+     <string name="filter_bi_romantic">Romantic</string>
+     <string name="filter_bi_sepia">Sepia</string>
+     <string name="filter_bi_strong">Strong</string>
+     <string name="filter_bi_sunny">Sunny</string>
+     <string name="filter_bi_tea">Tea</string>
+     <string name="filter_bi_warm">Warm</string>
+     <string name="filter_category_film">Film</string>
+     <string name="filter_category_food">Jídlo</string>
+     <string name="filter_category_portrait">Portréty</string>
+     <string name="filter_category_scene">Krajiny</string>
+     <string name="filter_film_blackwhite">B&amp;W</string>
+     <string name="filter_film_dew">Dew</string>
+     <string name="filter_film_fade">Fade</string>
+     <string name="filter_film_film">Film</string>
+     <string name="filter_film_grey">Grey</string>
+     <string name="filter_film_quiet">Calm</string>
+     <string name="filter_film_style">Poetic</string>
+     <string name="filter_film_time">Time</string>
+     <string name="filter_food_barbecue">BBQ</string>
+     <string name="filter_food_cookies">Cookies</string>
+     <string name="filter_food_delicious">Gourmet</string>
+     <string name="filter_food_dessert">Candy</string>
+     <string name="filter_food_fruit">Fruit</string>
+     <string name="filter_food_latte">Latte</string>
+     <string name="filter_food_softdrink">Soda</string>
+     <string name="filter_food_wholemeal">Grains</string>
+     <string name="filter_people_bw">B&amp;W</string>
+     <string name="filter_people_fairytale">Kids</string>
+     <string name="filter_people_japanese">Fresh</string>
+     <string name="filter_people_lilt">Lilt</string>
+     <string name="filter_people_maze">Maze</string>
+     <string name="filter_people_nature">Natural</string>
+     <string name="filter_people_pink">Blush</string>
+     <string name="filter_people_sepia">Sepia</string>
+     <string name="filter_people_tea">Tea</string>
+     <string name="filter_scene_city">City</string>
+     <string name="filter_scene_df">Mist</string>
+     <string name="filter_scene_koizora">Amour</string>
+     <string name="filter_scene_lomo">LOMO</string>
+     <string name="filter_scene_neon">Neon</string>
+     <string name="filter_scene_series">Reflections</string>
+     <string name="filter_scene_vivid">Vivid</string>
+     <string name="filter_scene_warm">Sun</string>
+     <string name="generate_story_summary">MIUI bude analyzovat vaše fotografie a vytvoří album s příběhy..</string>
+     <string name="generate_story_title">Album s příběhy</string>
+     <string name="image_selection_summary">MIUI bude analyzovat podobné fotografie a označí nejlepší záběry.</string>
+     <string name="image_selection_title">Vybrat nejlepší záběry</string>
+     <string name="motion_photo_play">Přehrát</string>
+     <string name="movie_add_disable">Můžete vybrat až 20 fotografií</string>
+     <string name="movie_audio_custom">Lokální</string>
+     <string name="movie_audio_default">Vzpomínky</string>
+     <string name="movie_audio_kawaii">Romantické</string>
+     <string name="movie_audio_light">Balada</string>
+     <string name="movie_audio_linear">Rock</string>
+     <string name="movie_audio_none">Žádný</string>
+     <string name="movie_audio_soft">Ukulele</string>
+     <string name="movie_audio_sport">Techno</string>
+     <string name="movie_cancel_download">Zrušit</string>
+     <string name="movie_change_to_long_video">Vybrali jste více než 5 fotografií. Přepnuto na delší video.</string>
+     <string name="movie_content_describe_add">Přidat</string>
+     <string name="movie_content_describe_delete">Vymazat</string>
+     <string name="movie_content_describe_pause">Zastavit</string>
+     <string name="movie_content_describe_play">Přehrát</string>
+     <string name="movie_delete_disable">Musíte vybrat alespoň 3 fotografie pro vytvoření videa.</string>
+     <string name="movie_download">Stáhnout</string>
+     <string name="movie_download_failed">Nebylo možné stáhnout</string>
+     <string name="movie_download_failed_for_notwork">Nebylo možné stáhnout. Připojte se k síti a zkuste to znovu..</string>
+     <string name="movie_download_sdk_without_wifi_msg">Nejste připojeni na Wi-Fi. Chcete stáhnout doplněk (3MB) přes mobilní data?</string>
+     <string name="movie_download_sdk_without_wifi_title">Stáhnout přes mobilní data</string>
+     <string name="movie_download_with_metered_network_msg">Stahování originálních fotografií může navýšit vaše poplatky. Chcete je stáhnout?</string>
+     <string name="movie_download_with_metered_network_title">Jste připojen na mobilní data</string>
+     <string name="movie_edit">Upravit</string>
+     <string name="movie_item_name">Klip</string>
+     <string name="movie_preview_btn">Náhled</string>
+     <string name="movie_preview_share_title">Sdílet</string>
+     <string name="movie_return">Zpět</string>
+     <string name="movie_save">Uložit</string>
+     <string name="movie_save_failed">Nelze uložit</string>
+     <string name="movie_save_stop_tips">Stiskněte znovu pro zrušení ukládání</string>
+     <string name="movie_save_successfully">Uloženo do Kreativity</string>
+     <string name="movie_saving">Vytváření klipu...</string>
+     <string name="movie_tab_edit">Upravit</string>
+     <string name="movie_tab_music">Hudba</string>
+     <string name="movie_tab_template">Šablona</string>
+     <string name="movie_template_baby">Roztomilé</string>
+     <string name="movie_template_food">Jídlo</string>
+     <string name="movie_template_new_year">Nový rok</string>
+     <string name="movie_template_normal">Melodie</string>
+     <string name="movie_template_party">Párty</string>
+     <string name="movie_template_pet">Labky</string>
+     <string name="movie_template_selfie">Čerstvé</string>
+     <string name="movie_template_travel">Cestování</string>
+     <string name="movie_template_xmas">Vánoce</string>
+     <string name="movie_video_long">Delší video</string>
+     <string name="movie_video_short">10s video</string>
+     <string name="operation_set_video_wallpaper">Nastavit jako video tapetu</string>
+     <string name="photo_editor_crop_auto">Auto</string>
+     <string name="photo_font_cancel_download">Zrušit</string>
+     <string name="photo_font_download">Stáhnout</string>
+     <string name="photo_font_download_failed_for_notwork">Nebylo možné stáhnout. Připojte se k síti a zkuste to znovu.</string>
+     <string name="photo_font_download_without_wifi_msg">Stahování přes mobilní data může navýšit vaše poplatky.</string>
+     <string name="photo_font_download_without_wifi_title">Mobilní data</string>
+     <string name="photo_movie_module_finish">Klipy jsou načteny</string>
+     <string name="photo_movie_module_loading">Načítání klipů...</string>
+     <string name="privacy_permission_request_message">Galerie potřebuje přístup k %3$s. Informace budou použity v souladu s našimi %1$s a %2$s. Povolit?</string>
+     <string name="privacy_permission_request_negative">Zakázat</string>
+     <string name="privacy_permission_request_positive">Povolit</string>
+     <string name="privacy_permission_request_title">Jsou vyžadována povolení</string>
+     <string name="recommend_category_title">Výběr galerie</string>
+     <string name="removed_from_favorites_desc">Odebrané z oblíbených</string>
+     <string name="rename_dialog_hint">Zadejte název</string>
+     <string name="rename_dialog_title">Přejmenovat</string>
+     <string name="search_empty_title">Vyhledat fotografie s vybranými lidmi, místy, a objekty</string>
+     <string name="search_feedback_task_progress">Misie %1$d/%2$d</string>
+     <string name="set_as_video_wallpaper_description">Stáhnout tuto položku a nastavit jako video tapetu?</string>
+     <string name="set_as_video_wallpaper_title">Nastavit jako video tapetu</string>
+     <string name="set_video_wallpaper_failed">Nelze nastavit jako video tapetu</string>
+     <string name="story_action_remove">Odebrat z příběhu</string>
+     <string name="story_action_share">Sdílet</string>
+     <string name="story_back_stop_download">Stiskněte znovu pro zrušení stahování</string>
+     <string name="story_cancel_download">Zrušit</string>
+     <string name="story_download">Stáhnout</string>
+     <string name="story_download_failed_for_notwork">Nebylo možné stáhnout. Připojte se k síti a zkuste to znovu.</string>
+     <string name="story_option_menu_delete">Vymazat příběh</string>
+     <string name="story_option_menu_rename">Přejmenovat</string>
+     <string name="story_photo_downloading">Stahování...</string>
+     <string name="story_remove_confirm_message">Odebrané fotografie nebudou zobrazeny v příběhu. Nebudou vymazány z úložiště.</string>
+     <string name="story_remove_confirm_positive">Odebrat</string>
+     <string name="story_remove_confirm_title">Odebrání fotografií</string>
+     <string name="story_rename_invalid_char">Nelze použít \"%s\" jako název příběhu. Použijte pouze písmena nebo čísla.</string>
+     <string name="story_rename_invalid_prefix">Nelze začít název příběhu s \".\" nebo \"_\""</string>
+     <string name="video_editor_adjust">Vylepšit</string>
+     <string name="video_editor_cancel_download">Zrušit</string>
+     <string name="video_editor_download">Stáhnout</string>
+     <string name="video_editor_download_failed_for_notwork">Nebylo možné stáhnout. Připojte se k síti a zkuste to znovu.</string>
+     <string name="video_editor_download_with_metered_network_msg">Stahování originálních videí může navýšit vaše poplatky. Chcete je stáhnout?</string>
+     <string name="video_editor_download_with_metered_network_title">Jste připojen na mobilní data</string>
+     <string name="video_editor_filter_and_regulator">Filtry</string>
+     <string name="video_editor_filter_bailu">Dew</string>
+     <string name="video_editor_filter_heibai">B&amp;W</string>
+     <string name="video_editor_filter_jiaopian">Film</string>
+     <string name="video_editor_filter_jingmi">Calm</string>
+     <string name="video_editor_filter_nuancha">Tea</string>
+     <string name="video_editor_filter_origin">Original</string>
+     <string name="video_editor_filter_qingse">Youth</string>
+     <string name="video_editor_filter_wangshi">Retro</string>
+     <string name="video_editor_filter_xiaosenlin">Grove</string>
+     <string name="video_editor_intelligent_special_effect">Efekty</string>
+     <string name="video_editor_regulator">Upravit</string>
+     <string name="video_editor_return">Zpět</string>
+     <string name="video_editor_save">Uložit</string>
+     <string name="video_editor_smart_effect_beat">Beats</string>
+     <string name="video_editor_smart_effect_big_film">Epic</string>
+     <string name="video_editor_smart_effect_cadence">Rhythm</string>
+     <string name="video_editor_smart_effect_dynamic">Dynamic</string>
+     <string name="video_editor_smart_effect_fastslow">Motion</string>
+     <string name="video_editor_smart_effect_freesze">Stop motion</string>
+     <string name="video_editor_smart_effect_halo">Halo</string>
+     <string name="video_editor_smart_effect_high_iframes_text">Tento efekt funguje nejlépe s 120 fps videem.</string>
+     <string name="video_editor_smart_effect_movie">Movie</string>
+     <string name="video_editor_smart_effect_none">Žádný</string>
+     <string name="video_editor_smart_effect_radical">Upbeat</string>
+     <string name="video_editor_smart_effect_rhythm">Pulse</string>
+     <string name="video_editor_smart_effect_street">Metropolis</string>
+     <string name="video_editor_smart_effect_time_limit_txt_40">Tento efekt může být použit pro videa do 40s.</string>
+     <string name="video_editor_smart_effect_time_limit_txt_6">Tento efekt může být použit pro videa delší než 6s.</string>
+     <string name="video_editor_smart_effect_time_limit_txt_60">Tento efekt může být použit pro videa do 60s.</string>
+     <string name="video_editor_text_default">Výchozí</string>
+     <string name="video_editor_text_edit_all">Vše</string>
+     <string name="video_editor_text_edit_input_all_hint">Zadejte text</string>
+     <string name="video_editor_unzip_file_fail">Nebylo možné rozbalit video.</string>
+     <string name="video_editor_video_is_short">Není možné upravit video.</string>
+     <string name="video_editor_watermark">Vodoznak</string>
 </resources>
