--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5633,4 +5633,67 @@ Tato funkcia vyžaduje povolení pro přístup k vaší poloze, používání mo
  OTG se automaticky deaktivuje po 10 minutách neaktivity."</string>
   <string name="resident_timezone_summary">Druhé hodiny</string>
   <string name="toast_sta_ap_works_wifi_display_disable">Nelze vysílat pokud je aktivní Wi-Fi připojení.</string>
+  <string name="allow_float_summary">Zobrazit upozornění na vrchu displeje</string>
+  <string name="allow_float_title">plovoucí upozornění</string>
+  <string name="allow_keyguard_summary">Zobrazit upozornění na zamčené obrazovce</string>
+  <string name="allow_keyguard_title">Upozornění na zamčené obrazovce</string>
+  <string name="allow_lights_title">Povolit LED upozornění</string>
+  <string name="allow_sound_title">Povolit zvuk</string>
+  <string name="allow_vibrate_title">Povolit vibrace</string>
+  <string name="app_link_title">Další nastavení v aplikací</string>
+  <string name="badge_title">Zobrazit bublinu na ikoně</string>
+  <string name="battery_indicator_title">zobrazení baterie</string>
+  <string name="block_title">Zobrazit upozornění</string>
+  <string name="custom_carrier_title">Upravit název operátora</string>
+  <string name="custom_wifi_name_title">Upravit název Wi-Fi</string>
+  <string name="expandable_under_keyguard_title">Zobrazit na zamykací obrazovce</string>
+  <string name="feedback">Odezva</string>
+  <string name="fold_title">Pravidla pro sloučená upozornění</string>
+  <string name="function_description">O této funkci</string>
+  <string name="gxzw_aod_show_summary">Ikona otisku prstu bude zobrazena na vypnutém displeji. Tato funkce může zvýšit spotřebu baterie.</string>
+  <string name="gxzw_aod_show_tittle">Zobrazit ikonu otisku prstu na vypnutém displeji</string>
+  <string name="importance_default">Výchozí</string>
+  <string name="importance_high">Vysoká</string>
+  <string name="importance_low">Nízká</string>
+  <string name="importance_min">Minimální</string>
+  <string name="importance_title">Důležitost</string>
+  <string name="incall_show">Profilové video pro příchozí hovory</string>
+  <string name="lights_title">LED</string>
+  <string name="loading">Načítání...</string>
+  <string name="manage_notification_title">upozornění aplikace</string>
+  <string name="miui_more_special_feature">Objevte nové funkce</string>
+  <string name="miui_special_feature">Speciální funkce</string>
+  <string name="more_installed_services_title">Více stažených služeb</string>
+  <string name="none">Žádné</string>
+  <string name="notifi_channels">kategorie upozornění</string>
+  <string name="notifi_channels_other">Ostatní</string>
+  <string name="notifi_importance_default">Zobrazit všude, přehrát zvuk ale ne vizuálně.</string>
+  <string name="notifi_importance_high">Zobrazit všude a přehrát zvuk.</string>
+  <string name="notifi_importance_low">Zobrazit všude ale nevyrušovat.</string>
+  <string name="notifi_importance_min">Zobrazit jen v roletce</string>
+  <string name="notifi_importance_none">Vypnuto</string>
+  <string name="notifi_importance_unspecified">Ponechat na aplikací</string>
+  <string name="notifi_no_channels">Tato aplikace nemá žádné upozornění</string>
+  <string name="notification_fold_description1">Tato funkce filtruje nedůležité upozornění a zobrazuje je v samostatné složce.</string>
+  <string name="notification_fold_description2">MIUI si bude pamatovat které upozornění jste otevřeli a podle toho určí zda jsou pro vás důležité.</string>
+  <string name="notification_fold_description3">Pokud se bude MIUI rozhodovat nesprávně, které upozornění jsou pro vás důležité, nahlaste nám to.</string>
+  <string name="notification_fold_summary">Všechny nedůležité upozornění budou zobrazeny v samostatné složce</string>
+  <string name="notification_fold_title">Složka s upozorněními</string>
+  <string name="notification_shade_shortcut_title">Zkratka roletky</string>
+  <string name="off">Vyp</string>
+  <string name="on">Zap</string>
+  <string name="other_settings_sync_settings">Synchr.</string>
+  <string name="peek_notification_icon_title">Zobrazit ikony pro nové upozornění</string>
+   <string name="priority_summary">Zobrazit upozornění jako první</string>
+  <string name="priority_title">Priorita</string>
+  <string name="show_carrier_under_keyguard_title">Zobrazit název operátora na zamčené obrazovce</string>
+  <string name="show_network_speed_title">Zobrazit rychlost připojení</string>
+  <string name="show_notification_icon_title">Zobrazit ikony upozornění</string>
+  <string name="show_wifi_name_title">Zobrazit Wi-Fi</string>
+  <string name="sound_title">Zvuk</string>
+  <string name="title_of_auto_launch_manage">Autostart</string>
+  <string name="toast_sta_ap_works_wifi_display_disable">Nelze vysílat pokud je Wi-Fi hot-spot aktivní.</string>
+  <string name="toggle_collapse_after_clicked_title">Sbalit po dotyku</string>
+  <string name="vibrate_title">Vibrovat</string>
+  <string name="visibility_override_title">Na zamčené obrazovce</string>
 </resources>
