--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -614,11 +614,11 @@ vyčistěte jej pro ostřejší fotografie."</string>
  <string name="lighting_hint_too_far">Přibližte kameru</string>
   <string name="lighting_hint_usage">"V režimu Portrét můžete využít efekty osvětlení"</string>
   <string name="lighting_pattern_dot">Bodové</string>
-  <string name="lighting_pattern_leaf">Leaves</string>
+  <string name="lighting_pattern_leaf">Listy</string>
   <string name="lighting_pattern_movie">Film</string>
   <string name="lighting_pattern_nature">Přirozené</string>
   <string name="lighting_pattern_rainbow">Duha</string>
-  <string name="lighting_pattern_shutter">Blinds</string>
+  <string name="lighting_pattern_shutter">Roleta</string>
   <string name="lighting_pattern_stage">Pódium</string>
   <string name="pref_camera_super_resolution_title">Povolit SR</string> 
   <string name="pref_camera_video_bokeh_off">Video bokeh je vypnuté</string>
@@ -646,5 +646,99 @@ vyčistěte jej pro ostřejší fotografie."</string>
   <string name="pref_camera_quick_shot_enable_title">Povolit rychlou fotografii</string>
   <string name="hint_ae_lock">Automatická expozice byla uzamčena</string>
   <string name="macro_mode">Makro</string>
-  <string name="macro_mode_tip">Vzdálenost mezi fotoaparátem a objektem by neměla být větší než 10cm</string>  
+  <string name="macro_mode_tip">Vzdálenost mezi fotoaparátem a objektem by neměla být větší než 10cm</string> 
+  <string name="ai_scene_top_moon_off">Režim nízkeho osvetlenia</string>
+     <string name="ai_scene_top_tip">Režim měsáíc</string>
+     <string name="beauty_body">Postava</string>
+     <string name="beauty_body_body">Štíhlý</string>
+     <string name="beauty_body_head">Hlava</string>
+     <string name="beauty_body_legged">Nohy</string>
+     <string name="beauty_body_reset_tip">Efekt postavy odstraněn</string>
+     <string name="beauty_body_shoulder">Ramena</string>
+     <string name="beauty_body_slim_count_tip">Efekt postavy funguje pouze pro fotografie osoby</string>
+     <string name="beauty_fragment_tab_name_3d_beauty">Krása</string>
+     <string name="beauty_fragment_tab_name_3d_makeup">Makeup</string>
+     <string name="beauty_fragment_tab_name_3d_remodeling">Přemodelování</string>
+     <string name="beauty_mode_reset_toast">Přemodelování odstraněno</string>
+     <string name="beauty_reset">Obnovit</string>
+     <string name="beauty_reset_toast">Efekt postavy obnoven</string>
+     <string name="beauty_tab_name_live_beauty">Zkrášlit</string>
+     <string name="beauty_tab_name_live_filter">Filtry</string>
+     <string name="bokeh_use_hint">Efekt hloubky</string>
+     <string name="camera_liveshot_off_tip">Dynamický záběr je vypnutý</string>
+     <string name="camera_liveshot_on_tip">Dynamický záběr</string>
+     <string name="capture_back_pressed_hint">Dotykem ukončíte</string>
+     <string name="close_back_flash_toast">Vaše zařízení je přehřáté. Nelze použít blesk.</string>
+     <string name="close_front_flash_toast">Vaše zařízení je přehřáté. Není možné použít blesk..</string>
+     <string name="color_effect_live_blue">Orchidej</string>
+     <string name="color_effect_live_fair">Pale</string>
+     <string name="color_effect_live_hongkong">Bauhinia</string>
+     <string name="color_effect_live_mousse">Mousse</string>
+     <string name="color_effect_live_none">Normální</string>
+     <string name="color_effect_live_solar">Sky blue</string>
+     <string name="color_effect_live_years">Sépie</string>
+     <string name="config_name_ratio">Pomer</string>
+     <string name="edit_blusher">Rtěnka</string>
+     <string name="edit_eyebrow_dye">Obočí</string>
+     <string name="edit_jelly_lips">Lesk na rty</string>
+     <string name="edit_pupil_line">Oční linka</string>
+     <string name="eye_light">Zesvětlení očí</string>
+     <string name="eye_light_angel">Andělské oči</string>
+     <string name="eye_light_comic">Komické oči</string>
+     <string name="eye_light_crescent">Půlměsíc očí</string>
+     <string name="eye_light_nature">Přírodní oči</string>
+     <string name="eye_light_rainbow">Duha</string>
+     <string name="eye_light_star">Hvězdičky</string>
+     <string name="eye_light_window">Okno</string>
+     <string name="hand_gesture_open_tip">Ukázat svou dlaň pro spuštění odpočítávání</string>
+     <string name="hand_gesture_tip">Spoušť dlaní</string>
+     <string name="hint_eye_light">Světlo v očích bude lépe při použita blesku</string>
+     <string name="hint_groupshot_beauty">V skupinové fotografii není možné použít zkrášlení</string>
+     <string name="live_edit_share_title">Sdílet</string>
+     <string name="live_error_confirm">Přizpůsobit čas</string>
+     <string name="live_error_message">Některé funkce nemusí pracovat správně pokud je nastaven nesprávný systémový čas.</string>
+     <string name="live_error_title">Systémový čas není správný</string>
+     <string name="live_music_change_bgm">Změnit hudbu v pozadí</string>
+     <string name="live_music_close_cancel_message">Zrušit</string>
+     <string name="live_music_close_message">Vypnout hudbu?</string>
+     <string name="live_music_close_sure_message">Vypnout</string>
+     <string name="live_music_downloading_tips">Stahování...</string>
+     <string name="live_music_hot_title">Populární skladby</string>
+     <string name="live_music_local_title">Lokální</string>
+     <string name="live_music_network_exception">Chyba sítě</string>
+     <string name="live_music_network_exception_tips">Nastala chyba sítě.</string>
+     <string name="live_reverse_confirm">Vymazat</string>
+     <string name="live_reverse_message">Vymazat předešlé záběry?</string>
+     <string name="live_sticker_network_error_hint">Chyba sítě</string>
+     <string name="live_sticker_updating">Aktualizace...</string>
+     <string name="makeup_reset_toast">Makeup efekt odstraněn</string>
+     <string name="multi_window_mode_not_supported">Fotoaparát nepodporuje rozdělení obrazovky</string>
+     <string name="network_access_user_notice_title">Připojování k síti</string>
+     <string name="pref_camera_beauty_deep">Profesionální zkrášlení</string>
+     <string name="pref_camera_live_sticker_internal_title">Nástroje</string>
+     <string name="pref_camera_long_press_viewfinder_lock_ae_af">AE/AF Zámek</string>
+     <string name="pref_camera_long_pressing_viewfinder_entry_lock_ae_af">AE/AF Zámek</string>
+     <string name="pref_camera_normal_wide_ldc_description">Opravit zdeformované tváře lidí, kteří jsou na krajích fotografie</string>
+     <string name="pref_camera_normal_wide_ldc_title">Opravit obličeje ve skupinové fotografii</string>
+     <string name="pref_camera_parallel_process_enable_title">Povolit paralelní zpracování</string>
+     <string name="pref_camera_sr_enable_title">Povolit SR</string>
+     <string name="pref_camera_ultra_wide_ldc_description">Automaticky opravit deformované objekty</string>
+     <string name="pref_camera_ultra_wide_ldc_title">Opravit zdeformované části na ultra široké fotografii</string>
+     <string name="pref_camera_ultra_wide_mode_title">Ultra široká fotografie</string>
+     <string name="pref_camera_zoom_mode_entry_ultra">ULTRA ŠIROKÝ</string>
+     <string name="pref_google_lens_summary">Automaticky identifikovat objekty</string>
+     <string name="pref_google_lens_title">Google lens</string>
+     <string name="pref_new_slow_motion_video_quality_240_720only">Můžete nahrát pouze 720p videa v 240fps</string>
+     <string name="pref_new_slow_motion_video_quality_960_720only">Můžete nahrát pouze 720p videa v 960fps</string>
+     <string name="pref_privacy_title">Ochrana soukromí</string>
+     <string name="super_night_toast">Držte váš telefon stabilně během záběru</string>
+     <string name="ultra_pixel_photography_32mp_close_tip">32MP je vypnuto</string>
+     <string name="ultra_pixel_photography_48mp_close_tip">48MP je vypnuto</string>
+     <string name="ultra_wide_bokeh_close_tip">Režim celé postavy je vypnutý</string>
+     <string name="ultra_wide_bokeh_open_tip">Režim celé postavy</string>
+     <string name="ultra_wide_close_tip">Ultra široký režim je vypnutý</string>
+     <string name="ultra_wide_mode_use_hint_text">Použijte tento režim pokud chcete zachytit širší scénu na vaší fotografii.</string>
+     <string name="ultra_wide_open_tip">Ultra široký režim</string>
+     <string name="ultra_wide_recommend_tip_hint">Zkuste Ultra široký režim</string>
+     <string name="zoom_no_support_tip_48M">Zoom nefunguje v 48MP režimu</string>   
 </resources>
