--- a/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
@@ -512,5 +512,38 @@ ale obsah, který hledáte, není dostupný ve Vaší zemi."</string>
   <string name="transparent_wallpaper_white_wallpaper_success">Pozadí je nyní bílé</string>
   <string name="transparent_wallpaper_white_wallpaper_tip">Průhledné pozadí vypadá nejlépe na bílé barvě</string>
   <string name="video_wallpaper_import">Dotykem přidáte položky</string>
-  <string name="wallpaper_set_as_float_wallpaper">průhledné pozadí (Beta)</string>  
+  <string name="wallpaper_set_as_float_wallpaper">průhledné pozadí (Beta)</string> 
+   <string name="transparency_pref_summary">Zvolte průhlednost tapety</string>
+     <string name="transparency_pref_title">Úoveň průhlednosti</string>
+     <string name="transparent_wallpaper_disable">Vyp</string>
+     <string name="transparent_wallpaper_enable">Zap</string>
+     <string name="transparent_wallpaper_filter_pref_summary">Průhledné pozadí nebudou zobrazeny v zakázaných aplikacích</string>
+     <string name="transparent_wallpaper_filter_pref_title">Vyberte aplikace ve kterých nechcete zobrazit tapetu</string>
+     <string name="transparent_wallpaper_filter_set_successfully">Nastaveno</string>
+     <string name="transparent_wallpaper_filter_setting">Aplikace</string>
+     <string name="transparent_wallpaper_pref_summary">Tapety s transparentním pozadím</string>
+     <string name="enable_transparent_wallpaper">Použít průhledné pozadí</string>
+     <string name="loop_wallpaper_is_here">Je dostupné střídání tapet</string>
+     <string name="wallpaper_loop_add_success">Přidáno</string>
+     <string name="wallpaper_loop_add_to_loop_desk_wallpaper">Přidat do domácí plochy</string>
+     <string name="wallpaper_loop_add_to_loop_lock_wallpaper">Přidat do zamykací obrazovky</string>
+     <string name="wallpaper_loop_desc_all_walpaper">Vytvořit vlastní seznam tapet</string>
+     <string name="wallpaper_loop_desc_desk_walpaper">Vytvořit vlastní seznam tapet pro Domácí plochu</string>
+     <string name="wallpaper_loop_desc_lock_walpaper">Vytvořit vlastní seznam tapet pro zamčenou obrazovku</string>
+     <string name="wallpaper_loop_interval_15min">Každých 15 min</string>
+     <string name="wallpaper_loop_interval_1d">Každý den</string>
+     <string name="wallpaper_loop_interval_1h">Každou hodinu</string>
+     <string name="wallpaper_loop_interval_desc">Nastavte časový interval změny</string>
+     <string name="wallpaper_loop_interval_title">Změnit tapetu</string>
+     <string name="wallpaper_loop_manage">Spravovat</string>
+     <string name="wallpaper_loop_more_options">Další nastavení</string>
+     <string name="wallpaper_loop_my_desk_wallpaper">Moje tapety plochy</string>
+     <string name="wallpaper_loop_my_lock_wallpaper">Moje tapety zámku</string>
+     <string name="wallpaper_loop_order_desc">Vyberte pořadí tapet</string>
+     <string name="wallpaper_loop_order_loop">Originál</string>
+     <string name="wallpaper_loop_order_shuffle">Náhodně</string>
+     <string name="wallpaper_loop_order_title">Pořadí pozadí</string>
+     <string name="wallpaper_loop_title">Střídání tapet</string>
+     <string name="wallpaper_loop_title_desk_wallpaper">Střídání tapet plochy</string>
+     <string name="wallpaper_loop_title_lock_walpaper">Střídání tapet zámku</string>   
 </resources>
